--- a/estilos.css
+++ b/estilos.css
@@ -260,7 +260,11 @@ body{
 
 form{
     text-align: center;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 input{
@@ -273,4 +277,3 @@ textarea{
 button{
     background-color: goldenrod;
 }
-
