--- a/estilos.css
+++ b/estilos.css
@@ -264,6 +264,7 @@ form{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color:  rgb(238, 5, 63);
     
 }
 
